# AndroidLogStudio

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.main.json  vite.config.ts  vitest.config.ts  设计需求.md
docs/: ADB-LIBS.md  CHANGELOG-2026-07-05-v2.md  CHANGELOG-2026-07-05-v3.md  CHANGELOG-2026-07-05.md  CHANGELOG-2026-07-06-adb.md
docs/superpowers/plans/: 2026-07-04-android-logcat-studio-mvp-acceptance.md  2026-07-04-android-logcat-studio-mvp.md  2026-07-06-adb-integration.md  2026-07-15-device-disconnect-and-log-isolation.md  2026-07-16-log-export.md
docs/superpowers/specs/: 2026-07-04-android-logcat-studio-design.md  2026-07-06-adb-integration-design.md  2026-07-15-device-disconnect-and-log-isolation-design.md  2026-07-16-log-export-design.md
engine/: Cargo.toml
engine/src/: adb.rs  device.rs  device_manager.rs  filter.rs  log_entry.rs  main.rs  parser.rs  pid_cache.rs  recorder.rs  ring_buffer.rs  statistics.rs  websocket.rs
scripts/: check-adb-layout.mjs  drive-electron.mjs  fix-exec-permissions.cjs  package-deb.sh  smoke-electron.mjs  smoke-settings.mjs
src/main/: main.ts  preload.cjs  preload.ts
src/renderer/: App.tsx  styles.css
src/renderer/api/: engineClient.ts
src/renderer/components/: DeviceSelect.tsx  DeviceTabs.tsx  LogView.tsx  QueryBar.test.ts  QueryBar.tsx  SearchBar.tsx  SettingsPanel.tsx  StatsPanel.tsx  StatusBar.tsx
src/renderer/export/: fileName.test.ts  fileName.ts
src/renderer/settings/: i18n.ts  storage.test.ts  storage.ts  (+1 more)
src/test/: setup.ts
tests/e2e/: app.spec.ts
(+4 files in other folders)
